Fixes component divider top and bottom spacing

--- a/front-end/Assets/src/css/modules/_dividers.scss
+++ b/front-end/Assets/src/css/modules/_dividers.scss
@@ -22,8 +22,8 @@
 .dividers {
 	.divider {
 		display: block;
-		margin:0;
-		padding: .65rem 0;
+		margin-top: .75rem;
+		padding-bottom: .75rem;
 	}
 	.layout-full-bleed > & {
 		padding: 0 1.25%; //% based for mobile
@@ -33,3 +33,4 @@
 		}
 	}	
 }
+
